YAS-CA/objects/Duplication__c.object
<CustomObject>
    <fields>
        <fullName>Class_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Class Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Classes__c</fullName>
        <label>Class(es)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copy_Paste_Scan__c</fullName>
        <label>Copy &amp; Paste Scan</label>
        <referenceTo>Copy_Paste_Scan__c</referenceTo>
        <relationshipLabel>Duplications</relationshipLabel>
        <relationshipName>Duplications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duplicated_Lines__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Duplicated Lines</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Duplication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Duplicated_Lines__c</columns>
        <columns>Classes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DUP-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>